# fasta2png

./: .travis.yml  C.jejuni.multi.fna  Makefile  NC_045512.2.fna  README.md  YP_009724389.1.faa  pyproject.toml  setup.cfg
.circleci/: config.yml
fasta2png/: __init__.py  faa2png.py  fna2png.py
