[metadata]
name = fasta2png
version = 1
url = https://github.com/metebalci/fasta2png
author = Mete Balci
author_email = metebalci@gmail.com
license = GPLv3
description = nucleic acid sequence to png converter
long_description_content_type = text/markdown
long_description = file:README.md
keywords = 
  fasta 
  png
classifiers = 
  Development Status :: 3 - Alpha
  Environment :: Console
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = Pillow

[options.entry_points]
console_scripts = 
  fna2png=fasta2png.fna2png:main
