[metadata]
name = fasta2png
version = 3
url = https://github.com/metebalci/fasta2png
author = Mete Balci
author_email = metebalci@gmail.com
license = GPLv3
description = nucleic acid or protein sequence to png converter
long_description_content_type = text/markdown
long_description = file:README.md
keywords = 
  fasta 
  fna
  faa
  png
classifiers = 
  Development Status :: 3 - Alpha
  Environment :: Console
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
  Pillow == 8.2.0

[options.entry_points]
console_scripts = 
  fna2png=fasta2png.fna2png:main
  faa2png=fasta2png.faa2png:main
